Add activities to show ViewGroup example

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,10 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".VerticalLinearLayoutExampleActivity"/>
+        <activity android:name=".HorizontalLinearLayoutExampleActivity"/>
+        <activity android:name=".FrameLayoutExampleActivity"/>
+        <activity android:name=".RelativeLayoutExampleActivity"/>
     </application>
 
 </manifest>
